--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">WigsApplicationn</string>
+    <string name="checkout">CHECKOUT</string>
+    <string name="total">Total:</string>
+    <string name="price_unit">Price Unit</string>
+    <string name="dimension">Dimension</string>
+    <string name="price">Price</string>
+    <string name="login">LOGIN</string>
+    <string name="login_button">Login</string>
+    <string name="button_checkout">Checkout</string>
+    <string name="pcs">PCS</string>
+    <string name="sub_total">Sub Total:</string>
+    <string name="_1">1</string>
+    <string name="buy">Buy</string>
+    <string name="register">REGISTER</string>
+    <string name="buat_akun_button">Buat Akun</string>
+    <string name="atau">Atau</string>
+    <string name="buat_akun">Buat Akun?</string>
 </resources>
